k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: instapay-staging
  labels:
    name: instapay-staging
    environment: staging
