k8s/staging/reporting-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporting-service
  namespace: instapay-staging

spec:
  selector:
    app: reporting-service
  ports:
    - port: 3003
      targetPort: 3003
