k8s/staging/transaction-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: instapay-staging

spec:
  selector:
    app: transaction-service
  ports:
    - port: 3002
      targetPort: 3002
