k8s/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instapay-ingress
  namespace: instapay-staging

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - staging.instapay.com
      secretName: instapay-staging-tls
  rules:
    - host: staging.instapay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3001
          - path: /api/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 3002
          - path: /api/reports
            pathType: Prefix
            backend:
              service:
                name: reporting-service
                port:
                  number: 3003
